--- a/index.html
+++ b/index.html
@@ -1023,7 +1023,7 @@
             <div class="mosaic-item" data-project="project10">
                 <img src="https://media.giphy.com/media/l0Iyl55kTeh71nTWw/giphy.gif" alt="Vidéo Narrative">
                 <div class="content">
-                    <h1>Projet 10</h1>
+                    <h1>Tir à l'arc</h1>
                     <button onclick="showVideo('project10')">Lire la vidéo</button>
                 </div>
                 <div class="arrow arrow-right">❯</div>
@@ -1171,7 +1171,12 @@
             project7: { url: "https://www.youtube.com/embed/3tmd-ClzV_Q", title: "Projet 7", description: "Description du projet 7..." },
             project8: { url: "https://www.youtube.com/embed/5qap5aO4i9A", title: "Projet 8", description: "Description du projet 8..." },
             project9: { url: "https://www.youtube.com/embed/dQw4w9WgXcQ", title: "Projet 9", description: "Description du projet 9..." },
-            project10: { url: "https://www.youtube.com/embed/9bZkp7q19f0", title: "Projet 10", description: "Description du projet 10..." },
+            project10: { url: "https://www.youtube.com/watch?v=cM4NBRcUd4Q", title: "Tir à l'arc", description: "La Coupe des Miss est une compétition internationale de Tir à l'Arc en salle, 100% féminine, qui se déroule le dernier week-end d'hiver à Issy-les-Moulineaux (France).
+
+"Coupe des Miss" is an international indoor archery tournament, for women only, which takes place in France, in Issy-les-Moulineaux near Paris, at the very end of winter.
+
+En soutien à l'association :
+ "La Cancer du Sein, Parlons-en!" ( http://www.cancerdusein.org )" },
             project11: { url: "https://www.youtube.com/embed/3tmd-ClzV_Q", title: "Projet 11", description: "Description du projet 11..." },
             project12: { url: "https://www.youtube.com/embed/5qap5aO4i9A", title: "Projet 12", description: "Description du projet 12..." },
             video1: { url: "https://www.youtube.com/embed/dQw4w9WgXcQ", title: "Vidéo 1", description: "Description vidéo 1..." },
