--- a/index.html
+++ b/index.html
@@ -1171,12 +1171,7 @@
             project7: { url: "https://www.youtube.com/embed/3tmd-ClzV_Q", title: "Projet 7", description: "Description du projet 7..." },
             project8: { url: "https://www.youtube.com/embed/5qap5aO4i9A", title: "Projet 8", description: "Description du projet 8..." },
             project9: { url: "https://www.youtube.com/embed/dQw4w9WgXcQ", title: "Projet 9", description: "Description du projet 9..." },
-            project10: { url: "https://www.youtube.com/watch?v=cM4NBRcUd4Q", title: "Tir à l'arc", description: "La Coupe des Miss est une compétition internationale de Tir à l'Arc en salle, 100% féminine, qui se déroule le dernier week-end d'hiver à Issy-les-Moulineaux (France).
-
-"Coupe des Miss" is an international indoor archery tournament, for women only, which takes place in France, in Issy-les-Moulineaux near Paris, at the very end of winter.
-
-En soutien à l'association :
- "La Cancer du Sein, Parlons-en!" ( http://www.cancerdusein.org )" },
+            project10: { url: "https://www.youtube.com/watch?v=cM4NBRcUd4Q", title: "Tir à l'arc", description: "La Coupe des Miss est une compétition internationale de Tir à l'Arc en salle, 100% féminine, qui se déroule le dernier week-end d'hiver à Issy-les-Moulineaux (France) },
             project11: { url: "https://www.youtube.com/embed/3tmd-ClzV_Q", title: "Projet 11", description: "Description du projet 11..." },
             project12: { url: "https://www.youtube.com/embed/5qap5aO4i9A", title: "Projet 12", description: "Description du projet 12..." },
             video1: { url: "https://www.youtube.com/embed/dQw4w9WgXcQ", title: "Vidéo 1", description: "Description vidéo 1..." },
