--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PLN gonzalo</title>
+    <title>PLN GUnzalo</title>
     <style>
         * {
             margin: 0;
@@ -1877,4 +1877,5 @@ function showVideo(projectId) {
 </script>
 </body>
 </html>
+
 
