--- a/index.html
+++ b/index.html
@@ -1203,7 +1203,7 @@ const relatedVideosMapping = {
     project1: ['project2', 'project3', 'video1'],
     project2: ['project1', 'project4', 'video2'],
     project3: ['project2', 'project5', 'video3'],
-    project4: ['project3', 'project6', 'video1'],
+    project4: ['project3', 'project6', 'video1', 'video2'],
     project5: ['project4', 'project7', 'video2'],
     project6: ['project5', 'project8', 'video3'],
     project7: ['project6', 'project9', 'video1'],
@@ -1877,5 +1877,6 @@ function showVideo(projectId) {
 </script>
 </body>
 </html>
+
 
 
