--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PLN GUNzalo</title>
+    <title>PLN GUNzZ</title>
     <style>
         * {
             margin: 0;
@@ -1174,6 +1174,10 @@
             project10: { url: "https://www.youtube.com/embed/cM4NBRcUd4Q?si=N7eeBa8sXn5yvALD", title: "Tir à l'arc", description: "La Coupe des Miss est une compétition internationale de Tir à l'Arc en salle, 100% féminine, qui se déroule le dernier week-end d'hiver à Issy-les-Moulineaux (France)" },
             project11: { url: "https://www.youtube.com/embed/3tmd-ClzV_Q", title: "Projet 11", description: "Description du projet 11..." },
             project12: { url: "https://www.youtube.com/embed/5qap5aO4i9A", title: "Projet 12", description: "Description du projet 12..." },
+            video101: { url: "https://www.youtube.com/embed/ZlmYrphKUxc?si=n1c4pj-Zb7ajDZD0", title: "Tir à l'arc", description: "La Coupe des Miss est une compétition internationale de Tir à l'Arc en salle, 100% féminine, qui se déroule le dernier week-end d'hiver à Issy-les-Moulineaux (France)" },
+            video102: { url: "https://www.youtube.com/embed/NrfJZrZ-n5M?si=C4Y3JDMUsm439u3Q", title: "Tir à l'arc", description: "La Coupe des Miss est une compétition internationale de Tir à l'Arc en salle, 100% féminine, qui se déroule le dernier week-end d'hiver à Issy-les-Moulineaux (France)" },
+            video103: { url: "https://www.youtube.com/embed/ceQZvVofQN8?si=nbAuB_uNb9n9V09C", title: "Tir à l'arc", description: "La Coupe des Miss est une compétition internationale de Tir à l'Arc en salle, 100% féminine, qui se déroule le dernier week-end d'hiver à Issy-les-Moulineaux (France)" },
+            video104: { url: "https://www.youtube.com/embed/Ln7A_6Uf8tY?si=aLicRcH4Iy7JcVCM", title: "Tir à l'arc", description: "La Coupe des Miss est une compétition internationale de Tir à l'Arc en salle, 100% féminine, qui se déroule le dernier week-end d'hiver à Issy-les-Moulineaux (France)" },
             video1: { url: "https://www.youtube.com/embed/dQw4w9WgXcQ", title: "Vidéo 1", description: "Description vidéo 1..." },
             video2: { url: "https://www.youtube.com/embed/9bZkp7q19f0", title: "Vidéo 2", description: "Description vidéo 2..." },
             video3: { url: "https://www.youtube.com/embed/3tmd-ClzV_Q", title: "Vidéo 3", description: "Description vidéo 3..." }
@@ -1209,7 +1213,7 @@ const relatedVideosMapping = {
     project7: ['project6', 'project9', 'video1'],
     project8: ['project7', 'project10', 'video2'],
     project9: ['project8', 'project11', 'video3'],
-    project10: ['project9', 'project12', 'video1'],
+    project10: ['video101', 'video102', 'video103', 'video104'],
     project11: ['project10', 'project1', 'video2'],
     project12: ['project11', 'project2', 'video3'],
     video1: ['project1', 'project2', 'video2'],
@@ -1877,6 +1881,7 @@ function showVideo(projectId) {
 </script>
 </body>
 </html>
+
 
 
 
