--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PLN GUNzZ</title>
+    <title>PLN GUNZZI</title>
     <style>
         * {
             margin: 0;
@@ -1174,7 +1174,8 @@
             project10: { url: "https://www.youtube.com/embed/cM4NBRcUd4Q?si=N7eeBa8sXn5yvALD", title: "Tir à l'arc", description: "La Coupe des Miss est une compétition internationale de Tir à l'Arc en salle, 100% féminine, qui se déroule le dernier week-end d'hiver à Issy-les-Moulineaux (France)" },
             project11: { url: "https://www.youtube.com/embed/3tmd-ClzV_Q", title: "Projet 11", description: "Description du projet 11..." },
             project12: { url: "https://www.youtube.com/embed/5qap5aO4i9A", title: "Projet 12", description: "Description du projet 12..." },
-            video101: { url: "https://www.youtube.com/embed/ZlmYrphKUxc?si=n1c4pj-Zb7ajDZD0", title: "Tir à l'arc", description: "Une compétition de Tir à l'Arc 100% féminine Women Individual Recurve Gold Match - DELOISON Alexia (FRA) vs LAURSEN Louise (DEN)" },
+            video101: { url: "https://www.youtube.com/embed/ZlmYrphKUxc?si=n1c4pj-Zb7ajDZD0", title: "Tir à l'arc", description: "Une compétition de Tir à l'Arc 100% féminine : La "Coupe des Miss" édition 2012! La Finale Classique du Samedi 17 Mars (1er jour de compétition) oppose DELOISON Alexia (FRA) à LAURSEN Louise (DEN)
+Day 1 of "Coupe des Miss" 2012 in Issy-les-Moulineaux (France). Women Individual Recurve Gold Match - DELOISON Alexia (FRA) vs LAURSEN Louise (DEN)" },
             video102: { url: "https://www.youtube.com/embed/NrfJZrZ-n5M?si=C4Y3JDMUsm439u3Q", title: "Tir à l'arc", description: "La Coupe des Miss est une compétition internationale de Tir à l'Arc en salle, 100% féminine, qui se déroule le dernier week-end d'hiver à Issy-les-Moulineaux (France)" },
             video103: { url: "https://www.youtube.com/embed/ceQZvVofQN8?si=nbAuB_uNb9n9V09C", title: "Tir à l'arc", description: "La Coupe des Miss est une compétition internationale de Tir à l'Arc en salle, 100% féminine, qui se déroule le dernier week-end d'hiver à Issy-les-Moulineaux (France)" },
             video104: { url: "https://www.youtube.com/embed/Ln7A_6Uf8tY?si=aLicRcH4Iy7JcVCM", title: "Tir à l'arc", description: "La Coupe des Miss est une compétition internationale de Tir à l'Arc en salle, 100% féminine, qui se déroule le dernier week-end d'hiver à Issy-les-Moulineaux (France)" },
@@ -1881,6 +1882,7 @@ function showVideo(projectId) {
 </script>
 </body>
 </html>
+
 
 
 
