--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PLN GUNZZiii</title>
+    <title>PLN GUNZZuuu</title>
     <style>
         * {
             margin: 0;
@@ -1175,9 +1175,9 @@
             project11: { url: "https://www.youtube.com/embed/3tmd-ClzV_Q", title: "Projet 11", description: "Description du projet 11..." },
             project12: { url: "https://www.youtube.com/embed/5qap5aO4i9A", title: "Projet 12", description: "Description du projet 12..." },
             video101: { url: "https://www.youtube.com/embed/ZlmYrphKUxc?si=n1c4pj-Zb7ajDZD0", title: "Tir à l'arc", description: "Une compétition de Tir à l'Arc 100% féminine : La Coupe des Miss édition 2012! <br><br> La Finale Classique du Samedi 17 Mars (1er jour de compétition) oppose DELOISON Alexia (FRA) à LAURSEN Louise (DEN) <br><br> Day 1 of Coupe des Miss 2012 in Issy-les-Moulineaux (France). Women Individual Recurve Gold Match - DELOISON Alexia (FRA) vs LAURSEN Louise (DEN)" },
-            video102: { url: "https://www.youtube.com/embed/NrfJZrZ-n5M?si=C4Y3JDMUsm439u3Q", title: "Tir à l'arc", description: "La Coupe des Miss est une compétition internationale de Tir à l'Arc en salle, 100% féminine, qui se déroule le dernier week-end d'hiver à Issy-les-Moulineaux (France)" },
-            video103: { url: "https://www.youtube.com/embed/ceQZvVofQN8?si=nbAuB_uNb9n9V09C", title: "Tir à l'arc", description: "La Coupe des Miss est une compétition internationale de Tir à l'Arc en salle, 100% féminine, qui se déroule le dernier week-end d'hiver à Issy-les-Moulineaux (France)" },
-            video104: { url: "https://www.youtube.com/embed/Ln7A_6Uf8tY?si=aLicRcH4Iy7JcVCM", title: "Tir à l'arc", description: "La Coupe des Miss est une compétition internationale de Tir à l'Arc en salle, 100% féminine, qui se déroule le dernier week-end d'hiver à Issy-les-Moulineaux (France)" },
+            video102: { url: "https://www.youtube.com/embed/NrfJZrZ-n5M?si=C4Y3JDMUsm439u3Q", title: "Tir à l'arc", description: "Une compétition de Tir à l'Arc 100% féminine : La Coupe des Miss édition 2012! <br><br> La Finale Poulies du Dimanche 18 Mars (2ème jour de compétition) oppose CHICHOU Elyane (FRA) à TREMEAU-CAUDAL Sandrine (FRA) <br><br> Day 2 of Coupe des Miss 2012 in Issy-les-Moulineaux (France). Women Individual Compound Gold Match - CHICHOU Elyane (FRA) vs TREMEAU-CAUDAL Sandrine (FRA)" },
+            video103: { url: "https://www.youtube.com/embed/ceQZvVofQN8?si=nbAuB_uNb9n9V09C", title: "Tir à l'arc", description: "Une compétition de Tir à l'Arc 100% féminine : La Coupe des Miss édition 2012! <br><br> La Finale Classique du Dimanche 18 Mars (2ème jour de compétition) oppose ADICEOM Audrey (FRA) à LAURSEN Louise (DEN) <br><br> Day 2 of the Coupe des Miss 2012 in Issy-les-Moulineaux (France). Women Individual Recurve Gold Match - ADICEOM Audrey (FRA) vs LAURSEN Louise (DEN) " },
+            video104: { url: "https://www.youtube.com/embed/Ln7A_6Uf8tY?si=aLicRcH4Iy7JcVCM", title: "Tir à l'arc", description: "Une compétition de Tir à l'Arc 100% féminine : La Coupe des Miss édition 2012! <br><br> La Finale Poulies du Samedi 17 Mars (1er jour de compétition) oppose JOIGNIER Hélène (FRA) à BARRUEL Hélène (FRA) <br><br> Day 1 of Coupe des Miss 2012 in Issy-les-Moulineaux (France). Women Individual Compound Gold Match - JOIGNIER Hélène (FRA) vs BARRUEL Hélène (FRA) " },
             video1: { url: "https://www.youtube.com/embed/dQw4w9WgXcQ", title: "Vidéo 1", description: "Description vidéo 1..." },
             video2: { url: "https://www.youtube.com/embed/9bZkp7q19f0", title: "Vidéo 2", description: "Description vidéo 2..." },
             video3: { url: "https://www.youtube.com/embed/3tmd-ClzV_Q", title: "Vidéo 3", description: "Description vidéo 3..." }
@@ -1199,7 +1199,11 @@
     project12: "https://media.giphy.com/media/3o7TKF0r3wY2f2gQ6k/giphy.gif",
     video1: "https://media.giphy.com/media/3o6Zta2kQfOv1oXz4Q/giphy.gif",
     video2: "https://media.giphy.com/media/3o7TKz9fL5s9Z6Z6hW/giphy.gif",
-    video3: "https://media.giphy.com/media/l0MYt5j0ya4jXh6M0/giphy.gif"
+    video3: "https://media.giphy.com/media/l0MYt5j0ya4jXh6M0/giphy.gif",
+    video101: "https://i.ytimg.com/vi/ZlmYrphKUxc/hqdefault.jpg?sqp=-oaymwEnCPYBEIoBSFryq4qpAxkIARUAAIhCGAHYAQHiAQoIGBACGAY4AUAB&rs=AOn4CLBRNbUVNJu-UFEVQ2wPbTm7tgJ-hA",
+    video102: "https://media.giphy.com/media/3o7TKz9fL5s9Z6Z6hW/giphy.gif",
+    video103: "https://media.giphy.com/media/l0MYt5j0ya4jXh6M0/giphy.gif",
+    video104: "https://media.giphy.com/media/l0MYt5j0ya4jXh6M0/giphy.gif"
 };
         
         // Mappage des vidéos associées pour chaque projet
@@ -1881,6 +1885,7 @@ function showVideo(projectId) {
 </script>
 </body>
 </html>
+
 
 
 
