--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PLN GUNZZuuu</title>
+    <title>PLN GUNZZyyy</title>
     <style>
         * {
             margin: 0;
@@ -1201,9 +1201,9 @@
     video2: "https://media.giphy.com/media/3o7TKz9fL5s9Z6Z6hW/giphy.gif",
     video3: "https://media.giphy.com/media/l0MYt5j0ya4jXh6M0/giphy.gif",
     video101: "https://i.ytimg.com/vi/ZlmYrphKUxc/hqdefault.jpg?sqp=-oaymwEnCPYBEIoBSFryq4qpAxkIARUAAIhCGAHYAQHiAQoIGBACGAY4AUAB&rs=AOn4CLBRNbUVNJu-UFEVQ2wPbTm7tgJ-hA",
-    video102: "https://media.giphy.com/media/3o7TKz9fL5s9Z6Z6hW/giphy.gif",
-    video103: "https://media.giphy.com/media/l0MYt5j0ya4jXh6M0/giphy.gif",
-    video104: "https://media.giphy.com/media/l0MYt5j0ya4jXh6M0/giphy.gif"
+    video102: "https://i.ytimg.com/vi/NrfJZrZ-n5M/hqdefault.jpg?sqp=-oaymwEnCPYBEIoBSFryq4qpAxkIARUAAIhCGAHYAQHiAQoIGBACGAY4AUAB&rs=AOn4CLBbQ1yQGgyKtGkQMMqmSnQMTUuyOw",
+    video103: "https://i.ytimg.com/vi/ceQZvVofQN8/hqdefault.jpg?sqp=-oaymwFBCPYBEIoBSFryq4qpAzMIARUAAIhCGAHYAQHiAQoIGBACGAY4AUAB8AEB-AH-CYAC0AWKAgwIABABGGUgUyhBMA8=&rs=AOn4CLCPSZhX2hJir2ka3lZc59rywsKn9Q",
+    video104: "https://i.ytimg.com/vi/Ln7A_6Uf8tY/hqdefault.jpg?sqp=-oaymwEnCPYBEIoBSFryq4qpAxkIARUAAIhCGAHYAQHiAQoIGBACGAY4AUAB&rs=AOn4CLATkCvh40Sw2h8wxSA1ec6yv0WeNA"
 };
         
         // Mappage des vidéos associées pour chaque projet
@@ -1885,6 +1885,7 @@ function showVideo(projectId) {
 </script>
 </body>
 </html>
+
 
 
 
