--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PLN GUNZZyyy</title>
+    <title>PLN GUNZZZZZZ</title>
     <style>
         * {
             margin: 0;
@@ -933,7 +933,7 @@
             <p>PLN Prod</p>
         </div>
         <ul>
-            <li><a href="#narration" onclick="scrollToProject(4)">Conservatoire</a></li>
+            <li><a href="#narration" onclick="scrollToProject(4)">Musique</a></li>
             <li><a href="#publicite" onclick="scrollToProject(7)">Nature</a></li>
             <li><a href="#musique-video" onclick="scrollToProject(10)">Sport</a></li>
             <li><a href="#" onclick="showSection('bio')">Bio</a></li>
@@ -1885,6 +1885,7 @@ function showVideo(projectId) {
 </script>
 </body>
 </html>
+
 
 
 
