--- a/index.html
+++ b/index.html
@@ -973,7 +973,7 @@
             <div class="mosaic-item" data-project="project4">
                 <img src="https://media.giphy.com/media/xT9IgzoZZ0xxInIgZq/giphy.gif" alt="Concert Électrique">
                 <div class="content">
-                    <h1>Projet 4</h1>
+                    <h1>Concert de Conservatoire</h1>
                     <button onclick="showVideo('project4')">Lire la vidéo</button>
                 </div>
                 <div class="arrow arrow-right">❯</div>
@@ -1885,6 +1885,7 @@ function showVideo(projectId) {
 </script>
 </body>
 </html>
+
 
 
 
